  * Mailings: Multipart emails
  * Users: Password resets
  * Users: Roles implemented

2009-03-04  Matias Korhonen <korhonen.matt@gmail.com>

  * [0.1] Early Alpha: Most of the major functionality implemented (Home page, News, Events, Articles, About page) at at least a rough level
  * Note: This release was more about our own project structure than about usable software

9999-99-99  Unreleased <unreleased>

  * [0.5]: Production quality
  * Mostly fully functional: Homepage, News, Articles, Events, Galleries (new), Users, About page, Contact form
  * Bugs: Major bug fixes
  * Security: Major security fixes
  * Admin interface: Improved previews
  * Admin interface: Improved the new/edit pages
  * Articles: Switched to CodeRay for syntax highlighting of code
  * Authentication: Moved to a separate SessionsController
  * Authentication: Restful user authentication
  * Configuration: A separate settings page
  * Diffs: Changed to word-by-word diffs
  * Diffs: Fixed ruby 1.9 compatibility issues
  * Error pages: Customized 404, 422, and 500 error pages
  * Events: Removed ICS support
  * Files: Asset and image uploads
  * Galleries: Yes, we have basic galleries now!
  * JavaScript: Moved to jQuery
  * Ordering: Order news and articles by the date they were published
  * SEO: XHTML metadata on rendered pages
  * Performance: Added the FiveRuns TuneUp gem for performance monitoring in development mode
  * Rails: Changed the current version to 2.3.3
  * Sitemaps: HTML & XML
  * Tracking: Support for Google Analytics
  * Users: Gravatar support for avatars
  * Users: Improved user profiles
  * Users: SSL login from the frontpage, if HTTPS is enabled
  * WYSIWYGish editor: Added the Markitup! textile editor

9999-99-99  Unreleased <unreleased>

  * [0.5.5] Bug Fix Galore: No new features. We really mean this. Bug fixes only!

9999-99-99  Unreleased <unreleased>

  * [0.6] New Feature Milestone: This milestone should contain the next set of new features